@@ -352,5 +352,6 @@ Version ${Version} (${Date})
  - Added support for Zoho Writer.
  - Added support for Eclipse's Orion editor.
  - Added support for Ymacs, an emacs-style code editor.
- - Fixed an issue in Ace and 280 Slides editors that in some cases caused the
-   current line to be executed as unprivileged JavaScript code.
+ - Removed support for 280 Slides, which has gone offline.
+ - Fixed an issue in the Ace editor that in some cases caused the current line
+   to be executed as unprivileged JavaScript code.
